src/test/rustdoc-ui/intra-doc/unresolved-import-recovery.stderr
error[E0433]: failed to resolve: maybe a missing crate `unresolved_crate`?
  --> $DIR/unresolved-import-recovery.rs:3:5
   |
LL | use unresolved_crate::module::Name;
   |     ^^^^^^^^^^^^^^^^ maybe a missing crate `unresolved_crate`?

error: Compilation failed, aborting rustdoc

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0433`.
